--- a/ecomapp/src/App.css
+++ b/ecomapp/src/App.css
@@ -6,12 +6,12 @@
 .carditem{
   border-radius: 10%;
   border: black;
- 
+ margin-bottom: 10%;
   background-color: black;
  width: 23.12%;
   margin-right: 40%;
   justify-content: center;
-  padding: 0%;
+  padding-bottom: 0.1%;
   border-color: black;
   
 }
@@ -22,20 +22,40 @@
   padding-left: 0%;
   justify-content: center;
   align-content: center;
+  border-color: black;
+  margin-bottom: 10%;
   
-}
+} 
 .cardimg{
-  border-radius: 0%;
-  width:fit-content;
- 
+  border-width: 1cm;
+ width: 19.5rem;
+ border-radius: 20%;
   
   
 }
 
-.cardimg{
-  border-radius: 0%;
-  width:fit-content;
- 
+
+.button{
+  
+ border-radius: 20%;
+ background-color: blue;
   
   
+}
+.carddescrip{
+  border-width: 1cm;
+ width: 19.5rem;
+ border-radius: 20%;
+  justify-content: center;
+  
+}
+
+.carddescri{
+  border-width: 1cm;
+ width: 19.5rem;
+ border-color: black;
+ margin-bottom: 10%;
+  justify-content: center;
+  color: black;
+  background-color: aliceblue;
 }
